--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/sam.jpg" class="img-fluid" alt="">
+            <img src="assets/img/sam.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>A full-stack Python Developer</h3>
